[gd_scene load_steps=13 format=3 uid="uid://bhb5312a6xrce"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Map/map_house_test.gd" id="1_1e6tj"]
[ext_resource type="Texture2D" uid="uid://cfnbuh58jcy8c" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_001.png" id="2_wktu7"]
[ext_resource type="Texture2D" uid="uid://5q60gws10pot" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_002.png" id="3_jvpc2"]
[ext_resource type="Texture2D" uid="uid://hqelslg2w4vl" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_003.png" id="4_y1obm"]
[ext_resource type="Texture2D" uid="uid://dubguhuhq1gja" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_004.png" id="5_ynkg8"]
[ext_resource type="Texture2D" uid="uid://tpjakkiu0pf4" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_highlight_001.png" id="6_1yh71"]
[ext_resource type="Texture2D" uid="uid://csdnddf6jr31n" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_highlight_002.png" id="7_vfy62"]
[ext_resource type="Texture2D" uid="uid://xfhy3xcbhaq3" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_highlight_003.png" id="8_u541b"]
[ext_resource type="Texture2D" uid="uid://dmaewmlmjoe2b" path="res://Assets/Art/Environment/Map/Houses/Garden Center/map_gardencenter_animation_highlight_004.png" id="9_elfue"]

[sub_resource type="SpriteFrames" id="SpriteFrames_unxvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wktu7")
}, {
"duration": 1.0,
"texture": ExtResource("3_jvpc2")
}, {
"duration": 1.0,
"texture": ExtResource("4_y1obm")
}, {
"duration": 1.0,
"texture": ExtResource("5_ynkg8")
}],
"loop": true,
"name": &"house_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_1yh71")
}, {
"duration": 1.0,
"texture": ExtResource("7_vfy62")
}, {
"duration": 1.0,
"texture": ExtResource("8_u541b")
}, {
"duration": 1.0,
"texture": ExtResource("9_elfue")
}],
"loop": true,
"name": &"house_highlight_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_351ux"]
size = Vector2(490, 501)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofhf1"]
size = Vector2(495, 42)

[node name="GardenCenterBuilding" type="Node2D"]
position = Vector2(263, 127)
script = ExtResource("1_1e6tj")
scene_name = "res://Scenes and Scripts/Game/Garden Center/garden_center.tscn"
building_name = "Gärtnerei"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2061, 1170)
sprite_frames = SubResource("SpriteFrames_unxvv")
animation = &"house_animation"
autoplay = "house_animation"

[node name="GärtnereiMaus" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="GärtnereiMaus"]
position = Vector2(3838, 960.5)
shape = SubResource("RectangleShape2D_351ux")

[node name="ExitPoint" type="Marker2D" parent="."]
position = Vector2(3846, 1286)

[node name="Gärtnerei" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gärtnerei"]
position = Vector2(3835.5, 1236)
shape = SubResource("RectangleShape2D_ofhf1")

[connection signal="mouse_entered" from="GärtnereiMaus" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="GärtnereiMaus" to="." method="_on_area_2d_mouse_exited"]
